1.19-6.0.13:
- Better error reporting and avoidance of crashing in case of a chunk generation error
- The createbuilding, createpart, and locatepart commands will now correctly use resource locations as arguments. They also support completion

1.19-6.0.12:
- TqLxQuanZ fixed a problem where bridges wouldn't use the computed palette
- TqLxQuanZ implemented optional door generation and cellar filler generation for buildings
- Fixed a problem with multibuildings where the chunks could sometimes generate at different heights

1.19-6.0.11:
- Small changes

1.19-6.0.10:
- Better feature registration

1.19-6.0.9:
- In worldstyles it is now possible to specify settings for city spheres. Including the possibility to predefine how the center of a sphere looks and possibly a part that is generated there
- The maximum numbers of floors and cellars has been raised significantly
- Made floor and cellar generation much more robust. It will now check if the generation goes beyond build limits and adjust accordingly

1.19-6.0.8:
- Better and faster way to get the biome for the condition context
- Fixed a bug where spawners were not actually being set in all cases
- Fixed the api sphere test returning true in worlds that don't support spheres
- It's now possible to use "tag" in palette entries. If you do this then this tag will be used to initialize the block entity

1.19-6.0.7:
- Accidental hard dependency on TOP

1.19-6.0.6:
- Dadobug1111 improved worldgen in several (sometimes subtle, sometimes less subtle) ways
- Four new tags that allow you to customize worldgen: lostcities/notbreakable (blocks that can't break with explosions), lostcities/easybreakable (blocks that explosions will break more easily), lostcities/foliage (foliage block test), lostcities/rotatable (rotatable blocks, like stairs)
- It is now possible to configure the leaves rubble and the random dirt/stone rubble you get in the city style (generalsettings)