@@ -7,8 +7,6 @@
     "minecraft:acacia_planks",
     "minecraft:dark_oak_planks",
     "minecraft:mangrove_planks",
-    "minecraft:bamboo_planks",
-    "minecraft:bamboo_mosaic",
     "minecraft:oak_sapling",
     "minecraft:spruce_sapling",
     "minecraft:birch_sapling",
@@ -24,7 +22,6 @@
     "minecraft:dark_oak_log",
     "minecraft:mangrove_log",
     "minecraft:mangrove_roots",
-    "minecraft:bamboo_block",
     "minecraft:stripped_spruce_log",
     "minecraft:stripped_birch_log",
     "minecraft:stripped_jungle_log",
@@ -32,7 +29,6 @@
     "minecraft:stripped_dark_oak_log",
     "minecraft:stripped_oak_log",
     "minecraft:stripped_mangrove_log",
-    "minecraft:stripped_bamboo_block",
     "minecraft:oak_wood",
     "minecraft:spruce_wood",
     "minecraft:birch_wood",
@@ -78,7 +74,6 @@
     "minecraft:brown_mushroom",
     "minecraft:red_mushroom",
     "minecraft:bookshelf",
-    "minecraft:chiseled_bookshelf",
     "minecraft:oak_stairs",
     "minecraft:chest",
     "minecraft:crafting_table",
@@ -90,7 +85,6 @@
     "minecraft:jungle_sign",
     "minecraft:dark_oak_sign",
     "minecraft:mangrove_sign",
-    "minecraft:bamboo_sign",
     "minecraft:oak_door",
     "minecraft:oak_wall_sign",
     "minecraft:spruce_wall_sign",
@@ -99,26 +93,6 @@
     "minecraft:jungle_wall_sign",
     "minecraft:dark_oak_wall_sign",
     "minecraft:mangrove_wall_sign",
-    "minecraft:bamboo_wall_sign",
-    "minecraft:oak_hanging_sign",
-    "minecraft:spruce_hanging_sign",
-    "minecraft:birch_hanging_sign",
-    "minecraft:acacia_hanging_sign",
-    "minecraft:jungle_hanging_sign",
-    "minecraft:dark_oak_hanging_sign",
-    "minecraft:crimson_hanging_sign",
-    "minecraft:warped_hanging_sign",
-    "minecraft:mangrove_hanging_sign",
-    "minecraft:bamboo_hanging_sign",
-    "minecraft:oak_wall_hanging_sign",
-    "minecraft:spruce_wall_hanging_sign",
-    "minecraft:acacia_wall_hanging_sign",
-    "minecraft:jungle_wall_hanging_sign",
-    "minecraft:dark_oak_wall_hanging_sign",
-    "minecraft:mangrove_wall_hanging_sign",
-    "minecraft:crimson_wall_hanging_sign",
-    "minecraft:warped_wall_hanging_sign",
-    "minecraft:bamboo_wall_hanging_sign",
     "minecraft:oak_pressure_plate",
     "minecraft:spruce_pressure_plate",
     "minecraft:birch_pressure_plate",
@@ -126,7 +100,6 @@
     "minecraft:acacia_pressure_plate",
     "minecraft:dark_oak_pressure_plate",
     "minecraft:mangrove_pressure_plate",
-    "minecraft:bamboo_pressure_plate",
     "minecraft:sugar_cane",
     "minecraft:jukebox",
     "minecraft:oak_fence",
@@ -137,7 +110,6 @@
     "minecraft:acacia_trapdoor",
     "minecraft:dark_oak_trapdoor",
     "minecraft:mangrove_trapdoor",
-    "minecraft:bamboo_trapdoor",
     "minecraft:brown_mushroom_block",
     "minecraft:red_mushroom_block",
     "minecraft:mushroom_stem",
@@ -161,8 +133,6 @@
     "minecraft:acacia_stairs",
     "minecraft:dark_oak_stairs",
     "minecraft:mangrove_stairs",
-    "minecraft:bamboo_stairs",
-    "minecraft:bamboo_mosaic_stairs",
     "minecraft:sunflower",
     "minecraft:lilac",
     "minecraft:rose_bush",
@@ -208,29 +178,24 @@
     "minecraft:acacia_slab",
     "minecraft:dark_oak_slab",
     "minecraft:mangrove_slab",
-    "minecraft:bamboo_slab",
-    "minecraft:bamboo_mosaic_slab",
     "minecraft:spruce_fence_gate",
     "minecraft:birch_fence_gate",
     "minecraft:jungle_fence_gate",
     "minecraft:acacia_fence_gate",
     "minecraft:dark_oak_fence_gate",
     "minecraft:mangrove_fence_gate",
-    "minecraft:bamboo_fence_gate",
     "minecraft:spruce_fence",
     "minecraft:birch_fence",
     "minecraft:jungle_fence",
     "minecraft:acacia_fence",
     "minecraft:dark_oak_fence",
     "minecraft:mangrove_fence",
-    "minecraft:bamboo_fence",
     "minecraft:spruce_door",
     "minecraft:birch_door",
     "minecraft:jungle_door",
     "minecraft:acacia_door",
     "minecraft:dark_oak_door",
     "minecraft:mangrove_door",
-    "minecraft:bamboo_door",
     "minecraft:chorus_plant",
     "minecraft:chorus_flower",
     "minecraft:beetroots",
