@@ -21,5 +21,5 @@ public class LostTags {
     public static final TagKey<Block> NOT_BREAKABLE_TAG = TagKey.create(Registry.BLOCK_REGISTRY, NOT_BREAKABLE);
 
     public static final ResourceLocation LIGHTS = new ResourceLocation(LostCities.MODID, "lights");
-    public static final TagKey<Block> LIGHTS_TAG = TagKey.create(Registries.BLOCK, LIGHTS);
+    public static final TagKey<Block> LIGHTS_TAG = TagKey.create(Registry.BLOCK_REGISTRY, LIGHTS);
 }
